hphp/hack/test/typecheck/lambda/variadics/arities01.php.like_types.exp
File "arities01.php", line 19, characters 12-45:
Invalid argument (Typing[4110])
File "arities01.php", line 10, characters 19-39:
Expected ~(function(D...): int) because it is an unenforceable type
File "arities01.php", line 19, characters 12-45:
But got (function(D $y...): int)
File "arities01.php", line 22, characters 12-18:
Invalid argument (Typing[4110])
File "arities01.php", line 10, characters 19-39:
Expected ~(function(D...): int) because it is an unenforceable type
File "arities01.php", line 21, characters 13-46:
But got (function(int $a, D $y...): int)
File "arities01.php", line 24, characters 13-52:
Invalid argument (Typing[4110])
File "arities01.php", line 14, characters 20-37:
Expected ~(function(D): int) because it is an unenforceable type
File "arities01.php", line 24, characters 13-52:
But got (function(D $d1, D $y...): int)
File "arities01.php", line 26, characters 12-19:
Invalid argument (Typing[4110])
File "arities01.php", line 10, characters 19-39:
Expected ~(function(D...): int) because it is an unenforceable type
File "arities01.php", line 26, characters 12-19:
But got (function(): int)
File "arities01.php", line 29, characters 12-18:
Invalid argument (Typing[4110])
File "arities01.php", line 10, characters 19-39:
Expected ~(function(D...): int) because it is an unenforceable type
File "arities01.php", line 28, characters 13-20:
But got (function(): int)
File "arities01.php", line 31, characters 13-20:
Too few arguments (required 1 but got 0) (Typing[4104])
File "arities01.php", line 14, characters 20-37:
Definition is here
File "arities01.php", line 31, characters 13-20:
Invalid argument (Typing[4110])
File "arities01.php", line 14, characters 20-37:
Expected ~(function(D): int) because it is an unenforceable type
File "arities01.php", line 31, characters 13-20:
But got (function(D): int)
File "arities01.php", line 34, characters 13-19:
Invalid argument (Typing[4110])
File "arities01.php", line 14, characters 20-37:
Expected ~(function(D): int) because it is an unenforceable type
File "arities01.php", line 33, characters 13-20:
But got (function(): int)
